# agentfleet

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md
examples/url-shortener-rate-limiting/: README.md
src/agentfleet/: __init__.py  agent.py  cli.py  display.py  git_utils.py  models.py  planner.py  prompts.py  tournament.py
tests/: __init__.py  test_git_utils.py  test_models.py
