[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfleet"
version = "0.1.0"
description = "Multi-agent tournament system for comparing LLM implementation approaches"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
agentfleet = "agentfleet.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
